fixed scrollbar appearing on long vessel names in Edge

--- a/app/src/vessels/components/Vessel.scss
+++ b/app/src/vessels/components/Vessel.scss
@@ -21,7 +21,7 @@
 
 .title {
   flex: 1;
-  overflow-y: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   color: $color-4;
